--- a/index.html
+++ b/index.html
@@ -31,14 +31,10 @@
             </div>
             <div>
                 <ul>
-                    <li><a href="#">Perchè Dropbox</a></li>
-                    <li><a href="#">Funzioni</a></li>
-                    <li><a href="#">Piani e Prezzi</a></li>
+                    <li><a href="#">Supporto</a></li>
+                    <li><a href="#">Contatta l'ufficio vendite</a></li>
+                    <li><a href="#">Accedi</a></li>
                 </ul>
-
-                <button>
-                    Accedi
-                </button>
                 <button>
                     Inizia
                 </button>
