--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <section>
             <figure>
-                <img src="" alt="">
+                <img src="img/partner.png" alt="descrizionedell'immagine">
             </figure>
             <h3>
                 Entra in contatto con un partner Dropbox
@@ -88,6 +88,56 @@
     </main>
 
     <footer>
+        <div>
+            <ul>
+                <h4>Dropbox</h4>
+                <li><a href="#">Applicazione desktop</a></li>
+                <li><a href="#">Perché Dropbox</a></li>
+                <li><a href="#">Piani</a></li>
+                <li><a href="#">Sicurezza</a> </li>
+                <li><a href="#">funzioni</a></li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <h4>Prodotti</h4>
+                <li><a href="#">Applicazione desktop</a></li>
+                <li><a href="#">Perché Dropbox</a></li>
+                <li><a href="#">Piani</a></li>
+                <li><a href="#">Sicurezza</a> </li>
+                <li><a href="#">funzioni</a></li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <h4>Azienda</h4>
+                <li><a href="#">Applicazione desktop</a></li>
+                <li><a href="#">Perchè Dropbox</a></li>
+                <li><a href="#">Piani</a></li>
+                <li><a href="#">Sicurezza</a> </li>
+                <li><a href="#">funzioni</a></li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <h4>Supporto</h4>
+                <li><a href="#">Applicazione desktop</a></li>
+                <li><a href="#">Perchè Dropbox</a></li>
+                <li><a href="#">Piani</a></li>
+                <li><a href="#">Sicurezza</a> </li>
+                <li><a href="#">funzioni</a></li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <h4>Community</h4>
+                <li><a href="#">Applicazione desktop</a></li>
+                <li><a href="#">Perchè Dropbox</a></li>
+                <li><a href="#">Piani</a></li>
+                <li><a href="#">Sicurezza</a> </li>
+                <li><a href="#">funzioni</a></li>
+            </ul>
+        </div>
 
     </footer>
     
