add: end header

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li><a href="#">Contatta l'ufficio vendite</a></li>
                     <li><a href="#">Accedi</a></li>
                 </ul>
-                <button>
+                <button class="btn btn--blue">
                     Inizia
                 </button>
             </div>
