add:fine esercizio

--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@
         </section>
 
         <section>
-            <figure>
-                <img src="img/partner.png" alt="descrizionedell'immagine">
-            </figure>
+            <div>
+                <figure>
+                    <img width="100%" src="img/partner.png" alt="descrizionedell'immagine">
+                </figure>
+
+            </div>
             <h3>
                 Entra in contatto con un partner Dropbox
             </h3>
