add:fine correzione esercizio

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- link debug css-->
-    <link rel="stylesheet" href="./css/debug.css">
+    <!--<link rel="stylesheet" href="./css/debug.css"> -->
 
     <!-- link reset css -->
      <link rel="stylesheet" href="./css/reset.css">
@@ -417,16 +417,17 @@
                             Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
                         </p>
                     </div>
-                </div> 
-
-                <hr>
-                
+                </div>                 
+            </div>            
+        </section>
+        <section>
+            <div class="container-80">
                 <h2>
                     Più di 500.000 team utilizzano Dropbox Business
                 </h2>
             
                 <a href="">Scopri di più sui nostri clienti</a>
-            </div>            
+            </div>
         </section>
     </main>
 
